--- a/netty-gateway-demo/note/os/进程和线程.md
+++ b/netty-gateway-demo/note/os/进程和线程.md
@@ -15,8 +15,8 @@
 - 在调用 copy_process 的过程中，会创建并拷贝当前进程的 task_stuct，
     同时还会创建属于子进程的 thread_info 结构以及内核栈。
 - 此后，会为创建好的 task_stuct 指定一个新的 pid（在 task_struct 结构体中）。
-- 然后根据传递给 clone 的参数标志，来选择拷贝还是共享打开的文件，文件系统信息，
-    信号处理函数，进程地址空间等。这就是进程和线程不一样地方的本质所在。
+- 然后根据**传递给 clone 的参数标志，来选择拷贝还是共享打开的文件，文件系统信息，
+    信号处理函数，进程地址空间等。这就是进程和线程不一样地方的本质所在**。
     
 ## 数据结构
 三个数据结构
