--- a/netty-gateway-demo/note/sql/h2/日志结构化储存.md
+++ b/netty-gateway-demo/note/sql/h2/日志结构化储存.md
@@ -6,7 +6,7 @@
 
 
 
-![img](log1.webp)
+![](log1.webp)
 
 
 
@@ -14,7 +14,7 @@
 
 
 
-![img](log2.webp)
+![](log2.webp)
 
 
 
@@ -26,7 +26,7 @@
 
 
 
-![img](log3.webp)
+![](log3.webp)
 
 
 
