add easy scheduler优化设计方案

--- a/netty-gateway-demo/note/algorithm/分布式共识机制.md
+++ b/netty-gateway-demo/note/algorithm/分布式共识机制.md
@@ -11,7 +11,7 @@
 
 拜占庭假设是对现实世界的模型化，由于硬件错误、网络拥塞或断开以及遭到恶意攻击，计算机和网络可能出现不可预料的行为。
 
-### 拜占庭将军问题问题分析
+### 拜占庭将军问题分析
 究其根底，`拜占庭将军问题`最终想解决的是互联网交易、合作过程中的四个问题：
 1. 信息发送的身份追溯
 2. 信息的私密性
@@ -25,6 +25,24 @@
 
 # 共识机制
 目前有4种方式：工作量证明(proof of work)，权益证明(proof of stake)，委托权益证明，授权拜占庭容错算法
+
+**拜占庭问题之所难解的很重要的一个原因就是因为各个节点提出提案的成本很低，
+所以在任何时候系统内可能存在多个提案，这就造成了在整个分布式系统想要完提案的最终确认变得十分困难，容易收到干扰**。
+
+比特币公链进行设计的时候提出了POW的算法思路，POW算法来解决拜占庭问题的思路有两条：
+
+- 限制一段时间内网络中出现提案的数量。也就是说每个节点在提出提案之前需要运行哈希现金（HashCash）的算法，
+  即需要在一个交易块中找到一个随机数，计算机只能通过穷举法来找到这个随机数。
+  同时中本聪设计了时间戳的机制，为每个节点的出块时间加上印章来保证公平性。
+
+- 弱化对于一致性确认的需求。在比特币网络中各个节点都确定验证已知的最长链进行延伸。
+  由于POW机制弱化了网络对于一致性（Consistency）的需求，所以同一时刻访问比特币的不同节点，
+  得到的内容并不一致，甚至网络会出现分叉的情况。但是整个网络的可用性（Availability）和分区容忍性（Partition）都得到了提升。
+
+同时比特币采用非对称加密的密码学技术来保证信息内容的安全，同时让信息的接收者使用公钥来验证信息发送者的身份，
+这就让网络中的所有身份都可以得到验证。这就让一个分布式的不可信的网络变成了一个可信的网络。
+这样即便网络中出现蓄意发起攻击者也要发送50%以上的算力，自己的利益也收到损失。
+后续的其他各种POX（Proof Of X）基本上也是沿袭这个思路进行优化和改进，采用经济上的惩罚来制约破坏者。
 
 ## 1.工作量证明 (POW)
 区块链轻而易举地解决了这`拜占庭将军问题`。
@@ -53,6 +71,13 @@
 因此，哈希算法对信息传递速率的限制加上加密工具使得区块链构成了一个无须信任的数据交互系统。
 在区块链上，一系列的交易、时间约定、域名记录、政治投票系统或者任何其他需要建立分布式协议的地方，参与者都可以达成一致。
 
+
+我们可以把比特币矿工解这道工作量证明迷题的步骤大致归纳如下：
+> 生成Coinbase交易，并与其他所有准备打包进区块的交易组成交易列表，通过Merkle Tree算法生成Merkle Root Hash
+把Merkle Root Hash及其他相关字段组装成区块头，将区块头的80字节数据（Block Header）作为工作量证明的输入
+不停的变更区块头中的随机数即nonce的数值，并对每次变更后的的区块头做双重SHA256运算（即SHA256(SHA256(Block_Header))）
+，将结果值与当前网络的目标值做对比，如果小于目标值，则解题成功，工作量证明完成
+
 ## 2.权益证明 (POS)
 与要求证明人执行一定量的计算工作不同，权益证明要求证明人提供一定数量加密货币的所有权即可。
 权益证明机制的运作方式是：
@@ -71,9 +96,9 @@
 那么900个币龄就在转移过程中被花费了，你的币数量虽然还是100个，但是币龄变更为0。
 币龄在数据链上就可以取到，任何人都可以验证。
 
-我们回过头来看看PoS究竟是什么，区块链共识机制的第一步就是随机筛选一个记账者，
+我们回过头来看看PoS究竟是什么，**区块链共识机制的第一步就是随机筛选一个记账者**，
 PoW是通过计算能力来获得记账权，计算能力越强，获得记账权的概率越大。
-PoS则将此处的计算能力更换为财产证明，就是节点所拥有的币龄越多，获得的记账的概率就越大。
+**PoS则将此处的计算能力更换为财产证明，就是节点所拥有的币龄越多，获得的记账的概率就越大**。
 这有点像公司的股权结构，股权占比大的合伙人话语权越重。
 
 #### 2.1.2 权益证明实现原理
