--- a/netty-gateway-demo/note/algorithm/分布式共识机制.md
+++ b/netty-gateway-demo/note/algorithm/分布式共识机制.md
@@ -72,11 +72,44 @@
 在区块链上，一系列的交易、时间约定、域名记录、政治投票系统或者任何其他需要建立分布式协议的地方，参与者都可以达成一致。
 
 
+难度值（difficulty）是矿工们在挖矿时候的重要参考指标，它决定了矿工大约需要经过多少次哈希运算才能产生一个合法的区块。
+比特币的区块大约每10分钟生成一个，如果要在不同的全网算力条件下，新区块的产生保持都基本这个速率，
+难度值必须根据全网算力的变化进行调整。简单地说，难度值被设定在无论挖矿能力如何，新区块产生速率都保持在10分钟一个。
+
+难度的调整是在每个完整节点中独立自动发生的。每2016个区块，所有节点都会按统一的公式自动调整难度，
+这个公式是由最新2016个区块的花费时长与期望时长（期望时长为20160分钟即两周，是按每10分钟一个区块的产生速率计算出的总时长）比较得出的，
+根据实际时长与期望时长的比值，进行相应调整（或变难或变易）。
+也就是说，如果区块产生的速率比10分钟快则增加难度，比10分钟慢则降低难度。
+
+这个公式可以总结为如下形式：
+> 新难度值 = 旧难度值 * ( 过去2016个区块花费时长 / 20160 分钟 )
+
+工作量证明需要有一个目标值。比特币工作量证明的目标值（Target）的计算公式如下：
+>目标值 = 最大目标值 / 难度值
+
+其中最大目标值为一个恒定值：
+> 0x00000000FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+
+目标值的大小与难度值成反比。比特币工作量证明的达成就是矿工计算出来的区块哈希值必须小于目标值。
+我们也可以简单理解成，比特币工作量证明的过程，就是通过不停的变换区块头（即尝试不同的nouce值）作为输入进行SHA256哈希运算，
+找出一个特定格式哈希值的过程（即要求有一定数量的前导0）。而要求的前导0的个数越多，代表难度越大。
+
 我们可以把比特币矿工解这道工作量证明迷题的步骤大致归纳如下：
 > 生成Coinbase交易，并与其他所有准备打包进区块的交易组成交易列表，通过Merkle Tree算法生成Merkle Root Hash
 把Merkle Root Hash及其他相关字段组装成区块头，将区块头的80字节数据（Block Header）作为工作量证明的输入
 不停的变更区块头中的随机数即nonce的数值，并对每次变更后的的区块头做双重SHA256运算（即SHA256(SHA256(Block_Header))）
 ，将结果值与当前网络的目标值做对比，如果小于目标值，则解题成功，工作量证明完成
+
+为什么比特币固定10分钟出一个块
+比特币的做法是，交易账本数据按照时间分块存储，每一块只存储10分钟的交易账本数据，
+这每个存储单元即称之为“区块”。而每一个区块的头部会记录这一数据块的序号、时间和Hash摘要数据。
+比较巧妙的地方在于，区块头部中的Hash摘要数据是由上一个区块的摘要数据和本区块的交易账本数据叠加后经过Hash函数得到的，即：
+>第n块的Hash值 = Hash(第n-1块的Hash值 + 第n块的账本数据)
+
+可以看到，虽然每一个区块内的交易账本数据是独立的，但是区块头部的Hash值却是依赖于上一区块的Hash值，
+从而形成了一条链式的结构。这想必也就是“区块链”名字的由来。
+链上的任何一个区块中的数据受到的篡改，都将反映到最新的一个区块的Hash值上，
+因此，要想验证某个节点的账本数据是否正确，只需要比对最新一个区块的Hash值即可。
 
 ## 2.权益证明 (POS)
 与要求证明人执行一定量的计算工作不同，权益证明要求证明人提供一定数量加密货币的所有权即可。
