--- a/netty-gateway-demo/note/algorithm/垃圾回收.md
+++ b/netty-gateway-demo/note/algorithm/垃圾回收.md
@@ -83,3 +83,37 @@ ZGC将对象存活信息存储在42~45位中，这与传统的垃圾回收并将
 **从上面的流程，可以看出ZGC的原理和go的三色标记很像。MO,MI,REMAPPED 对应黑灰白。**
 
 调优相关参考 **https://tech.meituan.com/2020/08/06/new-zgc-practice-in-meituan.html**
+ZGC运作过程
+
+1. Concurrent Mark(并发标记)
+
+    遍历对象图做可达性分析的阶段, 前后也要经过类似于G1, Shenandoah 的初始标记, 最终标记的短暂停顿。
+    > 与G1, Shenandoah不同的是, ZGC的标记是在指针上而不是在对象上进行的, 标记阶段会更新染色指针中的Marked0、Marked1标志位。
+
+2. Concurrent Prepare for Relocate(并发预备重分配)
+    此阶段需要根据特定的查询条件统计出本次收集过程要清理哪些Region, 将这些Region组成重分配集(Relocation Set)。
+
+3. Concurrent Relocate(并发重分配)
+
+    是ZGC执行过程中的核心阶段, 此过程要把重分配集中的存活对象复制到新的Region上, 
+   并为重分配集中的每个Region维护一个转发表(Forward Table), 记录从旧对象到新对象的转向关系。
+
+    >由于染色指针的存在, ZGC能仅从引用上就明确得知一个对象是否处于重分配集之中。如果用户线程此时并发访问了位于重分配集中的对象, 
+    这次访问将会被预置的内存屏障截获, 然后立即根据Region上的转发表记录将访问转发到新复制的对象上, 并同时修正该引用的值, 
+    使其直接指向新对象, 此即为Self-Healing(自愈)[只有第一次访问旧对象会陷入转发]。
+
+4. Concurrent Remap(并发重映射)
+
+    修正整个堆中指向重分配集中旧对象的所有引用。
+    重映射清理这些旧引用的主要目的是为了不变慢, 并不是很迫切。
+    ZGC将并发重映射阶段要做的工作, 合并到了下一次垃圾收集循环中的并发标记阶段里去完成, 从而节省了一次遍历对象图的开销。
+
+ZGC是一款优秀的垃圾收集器，它借鉴了Pauseless GC，也似乎在朝着C4 GC的方向发展——引入分代思想。
+
+ZGC卓越的表现，让我们开发者看到了商用级别的GC“飞入寻常百姓家”的希望，随着JDK的发展，我相信在未来的某一天，JVM调优这种反人类的操作将不复存在，底层的GC会自适应各种情况自动优化。
+
+其他关联：
+- 虚拟内存多重映射，linux是mmap系统调用
+- pgc (Pauseless GC), zing gc,C4(Concurrent Continuously Compacting Collector)
+
+- shenandoah gc
