--- a/netty-gateway-demo/note/logicEnglish/word/构词法.md
+++ b/netty-gateway-demo/note/logicEnglish/word/构词法.md
@@ -118,6 +118,9 @@
 #####  构成动词的常用后缀
 -ise/ize, -en, -ify等。例如：
 
+- **-ize/ise** : 意为"make",表示“使成...状态”、“使...化”等意思，英式英语中也使用-ise。
+  organize(使组织，安排)
+
 ```text
 realize(实现)，modernize(使现代化); widen(加宽)，strengthen(加强);
 
